--- a/src/pages/blog/using-mdx.mdx
+++ b/src/pages/blog/using-mdx.mdx
@@ -8,20 +8,47 @@ heroImageHeight: 360
 heroImageAspectRatio: "2:4"
 ---
 
-import H2 from "../../components/H2.jsx";
-export const components = { h2: H2 };
+import makeHeader from "../../components/H2.jsx";
+export const components = {
+  h1: makeHeader(1),
+  h2: makeHeader(2),
+  h3: makeHeader(3),
+  h4: makeHeader(4),
+  h5: makeHeader(5),
+  h6: makeHeader(6),
+};
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
 
-<h2>Why MDX?</h2>
+## Why MDX?
 
 MDX is a special flavor of Markdown that supports embedded JavaScript & JSX syntax. This unlocks the ability to [mix JavaScript and UI Components into your Markdown content](https://docs.astro.build/en/guides/markdown-content/#mdx-features) for things like interactive charts or alerts.
 
 If you have existing content authored in MDX, this integration will hopefully make migrating to Astro a breeze.
 
+# Header 1
+
+Header 1
+
+## Header 2
+
+Header 2
+
 ### Header 3
 
-foobar
+Header 3
+
+#### Header 4
+
+Header 4
+
+##### Header 5
+
+Header 5
+
+###### Header 6
+
+Header 6
 
 ## Example
 
