Show year on blog list

--- a/src/pages/blog/using-mdx.mdx
+++ b/src/pages/blog/using-mdx.mdx
@@ -8,7 +8,7 @@ heroImageHeight: 360
 heroImageAspectRatio: "2:4"
 ---
 
-import makeHeader from "../../components/H2.jsx";
+import makeHeader from "../../components/makeHeader.jsx";
 export const components = {
   h1: makeHeader(1),
   h2: makeHeader(2),
