--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -10,7 +10,18 @@ heroImageClass: "rounded-lg"
 heroImageAlt: "Me with a dog named Mac, at IrisVR's dog-friendly Manhattan office."
 ---
 
-I'm still building this site. Here's some Lorem Ipsum.
+import Link from "../components/Link.jsx";
+import makeHeader from "../components/makeHeader.jsx";
+export const components = {
+  h1: makeHeader(1),
+  h2: makeHeader(2),
+  h3: makeHeader(3),
+  h4: makeHeader(4),
+  h5: makeHeader(5),
+  h6: makeHeader(6),
+};
+
+I'm still building this site. Here's my <Link href="/resume.pdf" external>resume</Link>, built with <Link href="https://www.overleaf.com/read/dtpfhnwfyknp" external>Latex</Link>.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
 
