--- a/src/pages/blog/care-dot-com.mdx
+++ b/src/pages/blog/care-dot-com.mdx
@@ -26,19 +26,22 @@ But also more important things: habits like _"stop starting, start stopping"_, a
 
 Here are some of my highlights there:
 
-## Win 1: Code Quality and Docs
+## Win 1: Soft Skills, Code Quality, and Docs
 
-A lot of this is kind of grunt work. You definitely won't get promoted for it, but the little things lead to better experiences down the road.
+**The Problem:** People want to learn about your domain, architecture, patterns, practices, etc.
 
-It's unclear what kind of impact improving the readability of a function, or boosting unit test coverage, has. But it can't hurt.
+The solution is to teach them.
 
-Code quality was something I was thinking about a lot.
+A lot of this is kind of grunt work. You definitely won't get promoted for it, but the little things lead to better experiences for others (and yourself) down the road.
+The rationale is kind of like why you comment your code partly out of self-interest: because in six months when you come back you'll thank yourself.
+The same applies for mentoring: by verbally explaining, writing about, or visually documenting something, you come to understand it to a greater degree.
+That said, I probably over-relied on ad-hoc visual documentation in Slack responses and maybe didn't give enough TLC to Confluence.
+Maybe I preferred READMEs over Confluence? Maybe I thought the docs were too messy? Maybe I didn't have the time?
 
-At a larger org, there will be many teams. People will be hop in your team's Slack channel and ask technical or domain questions.
-I always tried to be as responsive and helpful as possible. Responding to Slack inquiries are a kind of documentation in their own right.
-When people have a question, chances are someone else has asked it in Slack before. I would often create some quick diagrams in Draw.io and attach them to Slack messages,
-to visually explain parts of our stack. Maybe this would cause Slack to inadvertently compete with Confluence as a source of truth
-for documentation, but I didn't think that was necessarily a bad thing.
+It's tedious, not a lot of the recognizable kind of impact.
+It's unclear what kind of impact we get from improving the readability of a function, or boosting unit test coverage.
+It definitely can't hurt!
+_Code quality is good to think about, but it can turn into yak-shaving pretty quickly_.
 
 ## Win 2: Senior-Care Ingestion
 
