tech stack post

--- a/src/pages/blog/irisvr.mdx
+++ b/src/pages/blog/irisvr.mdx
@@ -6,6 +6,9 @@ pubDate: "Mar 02 2021"
 heroImageSrc: "/irisvr-group.jpg"
 heroImageWidth: 500
 heroImageAspectRatio: "4032:3024"
+tags:
+  - new-chapter
+  - job
 ---
 
 import { Image } from "@astrojs/image/components";
